# C-Project

./: CMakeLists.txt  main.c  startupcode.txt
modules/headers/stages/: stageOne.h
modules/headers/startup/: introduction.h  start.h
modules/headers/utility/: clearScreen.h  colorText.h
modules/sources/stages/: stageOne.c
modules/sources/startup/: introduction.c  start.c
modules/sources/utility/: clearScreen.c  colorText.c
